--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,3 +1,7 @@
+---
+import Card from '../components/Card.astro'
+---
+
 <h1>Services</h1>
 <p>
   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi obcaecati
@@ -7,3 +11,4 @@
   maxime atque quos eligendi unde laudantium. Hic minima iure rem deleniti
   doloremque voluptatem odio enim.
 </p>
+<Card />
