--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,31 @@
 console.log('Hola Server')
 const title = 'Mi proyecto de Astro'
 const color = 'danger'
+const hobbies = ['Programar', 'Jugar', 'Dormir']
+const isActive = false
 ---
 
 <script>
   console.log('Hola Client')
 </script>
+
 <body>
+  {
+    hobbies.map((hobbie) => {
+      return <h3 class="warning">{hobbie}</h3>
+    })
+  }
   <h1 class="title">{title}</h1>
-  <h2 class={color}>Danger</h2>
+  <h3 class={color}>{isActive ? 'User On' : 'User Off'}</h3>
 </body>
 
 <style>
   body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     /* standar style */
     font-family: sans-serif;
     font-size: 1.2em;
@@ -28,5 +41,8 @@ const color = 'danger'
   }
   .danger {
     color: red;
+  }
+  .warning {
+    color: yellow;
   }
 </style>
