--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,10 +1,19 @@
+---
+interface Props {
+  pageTitle: string
+  metaDescription?: string
+}
+const { pageTitle, metaDescription } = Astro.props
+---
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Astro Curso</title>
+    <meta name="description" content={metaDescription || pageTitle} />
+    <title>Astro Curso | {pageTitle}</title>
   </head>
   <body> <slot /></body>
   <style>
@@ -14,14 +23,11 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      /* standar style */
       font-family: sans-serif;
       font-size: 1.2em;
-      margin: 0;
-      padding: 0;
+      margin: 0 auto;
       background-color: #000;
       color: white;
-      /* custom style */
     }
   </style>
 </html>
