--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,10 @@ const isActive = false
 import Layout from '../components/Layout.astro'
 ---
 
-<Layout>
+<Layout
+  pageTitle="Home"
+  metaDescription="Pagina que ofrece servicios de desarrollo"
+>
   <script>
     console.log('Hola Client')
   </script>
