--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -29,5 +29,10 @@ const { pageTitle, metaDescription } = Astro.props
       background-color: #000;
       color: white;
     }
+    a {
+      color: white;
+      text-decoration: none;
+      /* disable viwed to <a> */
+    }
   </style>
 </html>
