--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,7 @@
 ---
-import Layout from '../components/Layout.astro'
+import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout pageTitle="About">
-  <h1>Acerca de</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum asperiores
-    sint officiis cum consectetur illum tenetur ipsam nobis, minus qui quidem
-    fugiat? Expedita adipisci fugiat ullam nemo iure magnam qui quam vero
-    deleniti veritatis cupiditate, quaerat dicta molestias distinctio atque vel
-    eos eligendi. Inventore excepturi molestiae ut explicabo quia ullam!
-  </p>
+<Layout>
+  <h1>About</h1>
 </Layout>
