--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,96 +1,7 @@
 ---
-console.log('Hola Server')
-const title = 'Mi proyecto de Astro'
-const color = 'danger'
-const hobbies = ['Programar', 'Jugar', 'Dormir']
-const isActive = false
-import Layout from '../components/Layout.astro'
-import ButtonSubscribe from '../components/ButtonSubscribe'
+import Layout from '../styles/Layout.css'
 ---
 
-<Layout
-  pageTitle="Home"
-  metaDescription="Pagina que ofrece servicios de desarrollo"
->
-  <script>
-    console.log('Hola Client')
-  </script>
-  <!-- se carga siempre -->
-  <!-- <ButtonSubscribe client:load /> -->
-  {
-    hobbies.map((hobbie) => {
-      return <h3 class="warning">{hobbie}</h3>
-    })
-  }
-  <h1 class="title">{title}</h1>
-  <h3 class={color}>{isActive ? 'User On' : 'User Off'}</h3>
-  <p style="margin: auto;">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, dolor ex
-    provident aperiam harum accusantium repudiandae molestias eum saepe, dolores
-    aliquid explicabo, perspiciatis magnam corporis. Mollitia, facilis cumque
-    eius provident saepe eum accusantium repellat tempore dolorem veritatis a
-    esse maxime ex sapiente aliquid incidunt dignissimos sit nostrum iste
-    quisquam minima sint! Consequuntur exercitationem dolores facilis ipsa vero.
-    Voluptate illum, sunt quia quae vitae id quis saepe, itaque dignissimos
-    culpa expedita? Assumenda molestias deserunt sequi modi. Repellat quidem
-    tempore accusantium dolorem odit delectus fugit harum ea vero iusto?
-    Voluptatum pariatur quas perspiciatis perferendis error, exercitationem iste
-    veniam ab, doloribus, explicabo rerum nam. Hic, dolor dolores non explicabo
-    iusto et id quas modi voluptas. Enim velit nisi voluptatem. Voluptatibus
-    dolores tempora aliquam dolorem, minus nostrum voluptas, mollitia enim
-    quisquam est, quaerat ex laboriosam maiores harum provident vero sunt
-    ducimus alias? Sapiente nam earum animi minus. Voluptatibus nulla deleniti
-    ut earum hic, quibusdam optio. Eaque iusto perferendis, maxime quibusdam
-    itaque enim voluptas provident labore tempora nesciunt consequatur deleniti
-    necessitatibus perspiciatis quisquam dolores accusamus quae magni mollitia
-    architecto adipisci iure rerum veniam! Fugit libero assumenda, harum
-    doloribus optio laudantium, consequuntur omnis eos repellendus fugiat minus
-    ea rerum provident excepturi pariatur quas quia molestias earum. Ipsa
-    facilis ducimus necessitatibus velit, voluptates nihil at dolorem quis vel
-    voluptas ad distinctio hic odit ipsam numquam quasi. Tenetur in voluptate
-    incidunt laudantium ipsum perferendis assumenda doloremque illum. Officia,
-    et tenetur deleniti praesentium quia accusantium ducimus harum! Rerum nulla
-    sed nostrum beatae maxime! Eveniet autem quos nesciunt rem hic beatae
-    pariatur modi possimus placeat! Placeat magnam commodi inventore rem, quidem
-    sequi ut qui rerum voluptates excepturi cumque earum aut explicabo at
-    mollitia laboriosam maiores dignissimos aliquam repellat delectus quisquam.
-    Porro recusandae quidem fuga asperiores, laudantium ipsum cumque ducimus
-    quis dignissimos esse aliquam natus. Eius tempora voluptates aliquid
-    deserunt, dolor quidem nostrum doloremque aliquam minus aspernatur magnam
-    facilis, sunt ducimus maxime itaque eum delectus in, nulla sequi nesciunt
-    corporis. Nam, dignissimos odio. Officiis tempore aliquam illum nesciunt ea
-    ab eveniet animi corrupti, provident odio? Ea minus sunt sed quasi nesciunt?
-    Tempora assumenda enim eligendi officiis at quo voluptatem voluptate,
-    repudiandae nam aspernatur porro dolor nobis, dolore corrupti. Eligendi,
-    delectus dignissimos. Nulla quam consectetur accusantium dolores, aliquid
-    molestias sint molestiae! Possimus odio, perferendis vitae rem blanditiis
-    cumque ex? Totam ullam eius debitis nemo quas odio, doloribus blanditiis
-    placeat veniam tempore dolorum, facilis fuga repellat nam laborum quod
-    facere vitae iure, tempora consectetur quibusdam! Labore reiciendis
-    excepturi, accusantium maiores voluptatem enim libero placeat totam
-    suscipit, ipsam hic unde at commodi numquam sint quisquam fugit cumque ea
-    dignissimos! Ratione quas illo voluptatibus ipsa! Ratione, suscipit non. Qui
-    eius nulla temporibus alias consequuntur voluptas quo, fuga quaerat, commodi
-    laboriosam eveniet assumenda porro fugiat repudiandae delectus aliquid?
-    Beatae modi odit rem recusandae, quibusdam ipsum sapiente, veniam,
-    consequatur error eveniet ab architecto facere quo! Officia quasi ipsam
-    repudiandae suscipit ad consequuntur quibusdam est at nihil laboriosam nam
-    quidem in fuga magni asperiores perferendis, error eum totam minima libero
-    repellendus unde quae facilis molestiae. Odio, animi qui.
-  </p>
-  <ButtonSubscribe
-    client:visible
-  /><!-- se cargar al momento de ser visible  -->
+<Layout>
+  <h1 class="text-4xl text-red-400">Home Page</h1>
 </Layout>
-
-<style>
-  .title {
-    color: #1ab4fe;
-  }
-  .danger {
-    color: red;
-  }
-  .warning {
-    color: yellow;
-  }
-</style>
