--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,10 @@
 ---
 import '../styles/Layout.css'
+
+interface Props {
+  title: string
+}
+const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
@@ -8,7 +13,11 @@ import '../styles/Layout.css'
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Astro Landing</title>
+    <title>Astro Landing - {title}</title>
   </head>
-  <body> <slot /></body>
+  <body>
+    <main class="container mx-auto md:mt-10">
+      <slot />
+    </main>
+  </body>
 </html>
