--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,17 @@
 ---
-import Layout from '../styles/Layout.css'
+import Layout from '../layouts/Layout.astro'
+import Hero from '../components/landing/Hero.astro'
+import Features from '../components/landing/Features.astro'
+import More from '../components/landing/More.astro'
+import About from '../components/landing/About.astro'
+import Projects from '../components/landing/Projects.astro'
 ---
 
-<Layout>
-  <h1 class="text-4xl text-red-400">Home Page</h1>
+<Layout title="Home">
+  <Hero />
+  <More />
+  <Features />
+  <About />
+  <Projects />
+  <h1 class="text-4xl">Home Page</h1>
 </Layout>
