--- a/src/components/landing/About.astro
+++ b/src/components/landing/About.astro
@@ -1,1 +1,6 @@
-<h1>About</h1>
+<section class="bg-zinc-900 p-20 rounded-xl my-4 text-center">
+  <h2 class="text-5xl font-bold my-5">About</h2>
+  <p class="text-zinc-300">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, laudantium!
+  </p>
+</section>
