--- a/src/components/landing/Features.astro
+++ b/src/components/landing/Features.astro
@@ -4,13 +4,13 @@ import features from '../../config/features.json'
 
 <h1 class="text-center font-bold text-5xl mt-10">Features</h1>
 
-<div>
+<div class="grid lg:grid-cols-3 gap-4 p-4">
   {
     features.map((feature) => {
       return (
-        <div>
-          <h1 class="text-center font-bold text-2xl mt-5">{feature.title}</h1>
-          <p class="text-center text-xl mt-5">{feature.description}</p>
+        <div class="bg-slate-800 p-10 rounded-xl">
+          <h1 class="text-2xl font-bold my-4">{feature.title}</h1>
+          <p>{feature.description}</p>
         </div>
       )
     })
