--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro'
 import '../styles/Layout.css'
 
 interface Props {
@@ -20,4 +21,5 @@ const { title } = Astro.props
       <slot />
     </main>
   </body>
+  <Footer />
 </html>
