--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,10 @@ import '../styles/Layout.css'
 
 interface Props {
   title: string
+  metaTitle: string
+  metaDescription: string
 }
-const { title } = Astro.props
+const { title, metaDescription, metaTitle } = Astro.props
 ---
 
 <!DOCTYPE html>
@@ -14,6 +16,8 @@ const { title } = Astro.props
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content={metaTitle} />
+    <meta name="description" content={metaDescription} />
     <title>Astro Landing - {title}</title>
   </head>
   <body>
