--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import About from '../components/landing/About.astro'
 import Projects from '../components/landing/Projects.astro'
 ---
 
-<Layout title="Home">
+<Layout title="Home" metaDescription="Home" metaTitle="Home">
   <h1 class="text-4xl">Home Page</h1>
   <Hero />
   <More />
