--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,65 @@
 ---
-import Layout from '../layouts/Layout.astro'
+// import Layout from '../layouts/Layout.astro'
+import Loader from '../components/Home/Loaders.astro'
+import Divider from '../components/Home/Divider.astro'
+import Card from '../components/Home/Card.astro'
 ---
 
-<Layout title="About">
-  <h1>About</h1>
-</Layout>
+<!-- <Layout title="About" metaTitle="About" metaDescription="About text">
+</Layout> -->
+<header>
+  <!-- Navbar -->
+  <header class="bg-blue-500/1 p-4 w-full fixed top-0 z-10">
+    <div
+      class="flex items-center justify-between xl:max-w-7xl xl:mx-auto max-w-full px-[8%]"
+    >
+      <a href="#" class="py-1 text-white font-bold"> Hermes</a>
+      <a
+        href="#"
+        class="w-10 h-10 flex items-center justify-center"
+        style="background-image:url(/images/wpp.svg);"
+      >
+      </a>
+    </div>
+  </header>
+  <!-- Navbar -->
+  <!-- Background image -->
+  <div
+    class="overflow-hidden min-h-screen"
+    style="background-image: linear-gradient(0deg, #033b50 0%, #57d3ff 62%);"
+  >
+    <div
+      style="background-image:url(/images/low-poly-grid-haikei.svg);"
+      class="overflow-hidden min-h-screen opacity-10"
+    >
+    </div>
+    <div
+      class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed"
+      style="background-color: rgba(0, 0, 0, 0.15)"
+    >
+      <div class="flex justify-center items-center h-full">
+        <div>
+          <div
+            class="text-center text-white px-6 md:px-12 flex justify-between items-center gap-x-10"
+          >
+            <div>
+              <h1 class="text-5xl font-bold mt-0 mb-6">Heading</h1>
+              <h3 class="text-3xl font-bold mb-8">Subeading</h3>
+              <button
+                type="button"
+                class="px-6 py-2.5 border-2 border-white text-white font-medium text-xs uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
+              >
+                Get started
+              </button>
+            </div>
+            <Card />
+          </div>
+          <div class="flex justify-center items-center h-full mt-5">
+            <Loader />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <Divider />
+</header>
