--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,14 @@
 ---
 import Layout from '../styles/Layout.css'
+const color = 'warning'
 ---
 
 <Layout>
-  <h1 class="text-4xl text-red-400">Home Page</h1>
+  <h1 class={color}>Home Page</h1>
 </Layout>
+
+<style>
+  .warning {
+    color: yellow;
+  }
+</style>
