--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,5 +10,5 @@ import '../styles/Layout.css'
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astro Landing</title>
   </head>
-  <body> <slot /></body>
+  <body class="container mx-auto"> <slot /></body>
 </html>
