--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,29 @@
 ---
 import Layout from '../styles/Layout.css'
 const color = 'warning'
+const hobbies = ['Sports', 'Cooking']
+const isActive = false
 ---
 
 <Layout>
   <h1 class={color}>Home Page</h1>
+  {
+    hobbies.map((hobby) => (
+      <>
+        <li>{hobby}</li>
+        <button> Like </button>
+      </>
+    ))
+  }
+  <h3>{hobbies[0]}</h3>
+  <h4 class="danger">{isActive ? 'User Active' : 'User Deactivate'}</h4>
 </Layout>
 
 <style>
   .warning {
     color: yellow;
+  }
+  .danger {
+    color: red;
   }
 </style>
