--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,6 @@
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="About" metaDescription="About" metaTitle="About">
+<Layout metaDescription="About" metaTitle="About">
   <h1>About</h1>
 </Layout>
