--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,9 +1,9 @@
 ---
-import Card from '../components/Card.astro'
+import Card from '../layouts/Card.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout>
+<Layout metaDescription="services" metaTitle="Services">
   <div class="gap-y-5">
     <Card h1="Programacion" />
 
