--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -9,7 +9,7 @@ const response = await fetch('https://jsonplaceholder.typicode.com/posts')
 const posts = await response.json()
 ---
 
-<Layout>
+<Layout metaDescription="Posts" metaTitle="Posts">
   <h1>Publicaciones</h1>
   {
     posts.map((post: Post) => (
