--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ const color = 'warning'
 const hobbies = ['Sports', 'Cooking']
 const isActive = false
 import Logo from '../Images/Logo_Hermes.webp'
+import Button from '../components/ButtonSubscribe.jsx'
 ---
 
 <Layout metaDescription="Home" metaTitle="Home">
@@ -21,6 +22,62 @@ import Logo from '../Images/Logo_Hermes.webp'
       }
     </div>
   </div>
+  <div>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga deserunt
+    asperiores necessitatibus odit, nesciunt nihil! Ipsam necessitatibus
+    voluptates nisi vitae quos. Quia ipsam molestiae provident placeat
+    praesentium sit dignissimos enim quod? Deleniti esse rem pariatur deserunt
+    quidem velit repudiandae non magni hic nostrum, provident voluptates fugiat
+    quod inventore eaque voluptas, nobis amet repellendus! Minima illum repellat
+    dolores nobis pariatur recusandae, libero adipisci voluptatem eius ad in non
+    debitis enim corporis officia dolorem dolore? Enim earum vero porro sapiente
+    praesentium nesciunt esse maxime, aperiam quam corporis, dignissimos itaque
+    et sit autem recusandae. Provident nostrum sed ut, dolores mollitia magnam
+    expedita numquam aspernatur beatae incidunt iure nesciunt neque quidem
+    reiciendis aut at pariatur. Quod asperiores, autem expedita tempore ab
+    repellat quasi voluptate ipsa perspiciatis sequi reiciendis, dolor minus
+    vitae neque facilis! Suscipit sit autem nihil ipsum voluptate, illum ut
+    voluptates deleniti, eum odit at possimus dicta labore doloremque.
+    Architecto, assumenda dicta. Itaque, voluptate assumenda, asperiores
+    similique dolores eos saepe sapiente quidem soluta nam tempore illo
+    perferendis nesciunt, odit eveniet eius! Aspernatur provident natus illum,
+    consequatur fuga autem officia dolorem rem eligendi. Dolores, aspernatur,
+    beatae delectus voluptate facere ut neque mollitia quos tenetur amet
+    deleniti modi cupiditate necessitatibus blanditiis cum! Vero fuga quis
+    debitis corporis, quidem, quasi perspiciatis repellendus dolores reiciendis
+    commodi maxime sapiente, animi iusto architecto sit consequuntur vel dolore
+    est odit distinctio. Ullam eaque vel vero illo iure architecto! Debitis
+    corrupti ullam dolorum quaerat neque dolores voluptate explicabo accusamus
+    nihil est quos sed itaque, magni quis? Doloremque magnam eos corporis
+    obcaecati, dolor pariatur tenetur, quo aperiam cumque eum assumenda animi
+    non quisquam expedita nesciunt distinctio rerum ipsum aspernatur tempore
+    ipsa. Nulla exercitationem, sapiente temporibus quam totam reiciendis
+    debitis quis perferendis odio obcaecati labore eveniet sed quod qui harum
+    asperiores alias doloribus repellat nemo assumenda quo natus aut iusto
+    laborum. Aut error cupiditate laudantium explicabo, corrupti delectus
+    laborum quidem ipsa aliquid, iure earum inventore atque veniam dolorem alias
+    illo voluptas labore veritatis nihil perferendis, similique tempore? Nobis
+    commodi sequi sunt, saepe earum adipisci illo architecto nihil! Asperiores,
+    ducimus culpa. In nihil et quisquam saepe assumenda voluptas placeat. Quod
+    eveniet cupiditate earum magnam veniam architecto commodi, porro sunt
+    suscipit quo, minus nobis, molestiae vitae minima ratione non fugit aliquam
+    dolore nesciunt facere harum autem similique atque? Magni ratione, dolores
+    nostrum unde numquam assumenda est reprehenderit mollitia, dolorum iste
+    saepe incidunt odit quisquam odio tenetur deleniti labore possimus? Est
+    inventore libero nulla vel? Doloribus, ipsa vel. Commodi numquam quasi ipsa
+    dolor atque porro et tenetur cum impedit, voluptatum doloribus sed
+    cupiditate ex labore deserunt neque reiciendis sint voluptate unde! Sit
+    dolores architecto asperiores suscipit, adipisci iusto voluptatibus libero
+    maxime ea expedita porro quidem labore mollitia autem consequatur impedit
+    dolor quas, eos fugiat culpa aliquid? Impedit quasi molestiae voluptatum
+    commodi magnam sint repellendus accusamus iure, consequuntur nihil
+    voluptates eligendi nulla quisquam hic, deserunt dignissimos ut harum
+    asperiores. Amet, exercitationem tenetur? Labore, eos? Accusamus facilis hic
+    dolorum error? Blanditiis rem sint quo nostrum id deleniti aliquid? Error
+    illum amet nisi voluptates inventore debitis odit, expedita ipsa.
+  </div>
+  <Button client:visible /> //visible : si es vible carga js
+  <!-- <Button client:load /> //load: se carga al inicio -->
   <h3>{hobbies[0]}</h3>
   <h4 class="danger">{isActive ? 'User Active' : 'User Deactivate'}</h4>
 </Layout>
