--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,23 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import { getCollection } from 'astro:content'
+const blogEntries = await getCollection('posts')
 ---
 
 <Layout metaDescription="About" metaTitle="About">
   <h1>About</h1>
+  <ul>
+    {
+      blogEntries.map((blogPostEntry) => (
+        <li>
+          <a href={`/my-blog-url/${blogPostEntry.slug}`}>
+            {blogPostEntry.data.title}
+          </a>
+          <time datetime={blogPostEntry.data.publishedDate.toISOString()}>
+            {blogPostEntry.data.publishedDate.toDateString()}
+          </time>
+        </li>
+      ))
+    }
+  </ul>
 </Layout>
