--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -13,9 +13,9 @@ import ButtonAction from '../global/ButtonAction.astro'
       ipsa voluptatum. Libero necessitatibus, alias quam nemo porro possimus.
       Ducimus, similique.
     </p>
-    <div class="mx-auto w-full content-center text-center">
+    <div class="mx-auto w-full content-center text-center mb-5">
       <ButtonAction text="Get Started" />
     </div>
   </div>
-  <img src="images/FingerPrint.svg" alt="" class="w-80" />
+  <img src="images/FingerPrint.svg" alt="" class="w-80 mx-auto" />
 </header>
