--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title, metaDescription, metaTitle } = Astro.props
     <title>Astro Landing - {title}</title>
   </head>
   <body>
-    <main class="container mx-auto md:mt-10">
+    <main class="container mx-auto sm:mt-10">
       <slot />
     </main>
   </body>
